--- a/src/styles/admin-dashboard.less
+++ b/src/styles/admin-dashboard.less
@@ -1,8 +1,33 @@
 .avatar {
-    margin: 30px 0px 5px 110px;
+    float: right;
+    margin: 12px 20px 0px 10px;
 }
 
 .userName {
-    text-align: center;
-    padding: 5px 0px 15px 0px;
+    text-align: right;
+    padding: 20px 0px 15px 0px;
+}
+
+.logo {
+    height: 52px;
+    width: 162px;
+    margin: 16px;
+    background: rgba(43, 42, 42, 0.2);
+}
+
+.createButton {
+    width: 150px;
+    margin-bottom: 15px;
+}
+
+.createButton svg {
+    margin-bottom: 8px;
+}
+
+.site-layout-sub-header-background {
+    background: #fff;
+}
+
+.site-layout-background {
+    background: #fff;
 }
