--- a/src/styles/admin-dashboard.less
+++ b/src/styles/admin-dashboard.less
@@ -4,7 +4,7 @@
 }
 
 .userName {
-    text-align: right;
+    float: right;
     padding: 20px 0px 15px 0px;
 }
 
@@ -30,4 +30,32 @@
 
 .site-layout-background {
     background: #fff;
+}
+
+.editButton {
+    border-color: #1890ff;
+    width: 40px;
+    color: #1890ff
+}
+
+.deleteButton {
+    border-color: #f5222d;
+    width: 40px;
+    color: #f5222d
+}
+
+.viewButton {
+    border-color: #52c41a;
+    width: 40px;
+    color: #52c41a
+}
+
+.siderDashboard {
+    border-style: solid;
+    border-color: white #CECECE white white;
+    border-width: 1px;
+}
+
+.country {
+    margin-bottom: 5px;
 }
