update profile, account

--- a/src/components/cars/styles.less
+++ b/src/components/cars/styles.less
@@ -1,3 +1,13 @@
 // .ant-form-item svg {
 //     margin-bottom: 5px;
 // }
+
+.ant-modal-footer {
+    padding-bottom: 45px;
+}
+
+::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: rgb(202 202 202);
+    /* Firefox */
+}
