--- a/src/styles/admin-dashboard.less
+++ b/src/styles/admin-dashboard.less
@@ -19,9 +19,9 @@
     margin-bottom: 15px;
 }
 
-.createButton svg {
-    margin-bottom: 7px;
-}
+// .createButton svg {
+//     margin-bottom: 7px;
+// }
 
 .site-layout-sub-header-background {
     background: #fff;
@@ -32,21 +32,29 @@
 }
 
 .editButton {
-    border-color: #1890ff;
-    width: 40px;
-    color: #1890ff
+    color: white;
+    background-color: #316B83 !important;
+    box-shadow: 3px 4px 0px -1px rgba(0, 0, 0, 0.24);
+    -webkit-box-shadow: 3px 4px 0px -1px rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 3px 4px 0px -1px rgba(0, 0, 0, 0.24);
 }
 
+.editButton .fas {}
+
 .deleteButton {
-    border-color: #f5222d;
-    width: 40px;
-    color: #f5222d
+    color: white;
+    background-color: #DE8971 !important;
+    box-shadow: 3px 4px 0px -1px rgba(0, 0, 0, 0.24);
+    -webkit-box-shadow: 3px 4px 0px -1px rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 3px 4px 0px -1px rgba(0, 0, 0, 0.24);
 }
 
 .viewButton {
-    border-color: #52c41a;
-    width: 40px;
-    color: #52c41a
+    color: white;
+    background-color: #435560 !important;
+    box-shadow: 3px 4px 0px -1px rgba(0, 0, 0, 0.24);
+    -webkit-box-shadow: 3px 4px 0px -1px rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 3px 4px 0px -1px rgba(0, 0, 0, 0.24);
 }
 
 .siderDashboard {
