--- a/src/components/proposals/style.less
+++ b/src/components/proposals/style.less
@@ -9,3 +9,27 @@
 .proposal {
     margin-top: 20px;
 }
+
+.eventDetailBtn {
+    cursor: alias;
+}
+
+.approveEventBtn {
+    cursor: alias;
+}
+
+.disapprovedEventBtn {
+    cursor: alias;
+}
+
+.eventDetailBtn:hover {
+    color: #FF7643 !important;
+}
+
+.approveEventBtn:hover {
+    color: #FF7643 !important;
+}
+
+.disapprovedEventBtn:hover {
+    color: #a1340c !important;
+}
