--- a/src/components/posts/styles.less
+++ b/src/components/posts/styles.less
@@ -1,6 +1,6 @@
 .body123 {
     background-color: white;
-    height: 100vh;
+   // height: 100vh;
     color: black;
 }
 
@@ -9,14 +9,13 @@
 }
 
 .buttonBack {
-    margin: 10px 0px 0px 10px;
+    margin: 30px 50px;
     border-style: solid;
     border-radius: 20px;
 }
 
 .title {
     font-size: 36px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
     margin-bottom: 30px;
     font-weight: 550;
@@ -54,6 +53,7 @@
 .ant-form-item-control-input-content .ck-heading-dropdown .ck-list .ck-button__label {
     font: 16px/1.6 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 /* Adjust the headings dropdown to host some larger heading styles. */
 .ant-form-item-control-input-content .ck-heading-dropdown .ck-list .ck-button__label {
     line-height: calc(1.7 * var(--ck-line-height-base) * var(--ck-font-size-base));
@@ -115,15 +115,12 @@ Preserve the relative scale, though. */
 /* Set the styles for "Paragraph". */
 .ant-form-item-control-input-content .ck-content p {
     font-size: 1em;
-    line-height: 1.63em;
-    padding-top: .5em;
-    margin-bottom: 1.13em;
+
 }
+
 /* Make the block quoted text serif with some additional spacing. */
 .ant-form-item-control-input-content .ck-content blockquote {
     font-family: Georgia, serif;
     margin-left: calc(2 * var(--ck-spacing-large));
     margin-right: calc(2 * var(--ck-spacing-large));
 }
-
-
