--- a/src/components/events/styles.less
+++ b/src/components/events/styles.less
@@ -14,12 +14,13 @@
 }
 
 .textEventAndProposal {
-    padding-top: 10px;
+    padding-top: 8px;
+    margin-bottom: 25px;
 }
 
 .textEventAndProposalChild {
     background-color: #96bcee;
-    padding: 7px;
+    padding: 10px;
     color: white;
     border-radius: 2px;
     font-weight: 450;
@@ -38,4 +39,18 @@
     font-weight: 450;
     font-size: 14px;
     color: white;
+}
+
+.textEventApproved:focus {
+    background-color: white !important;
+    color: #ff7643;
+}
+
+//#F39797
+.inputSearchCheck .ant-input-group .ant-input:first-child {
+    height: 32px;
+}
+
+.inputSearchCheck .anticon svg {
+    margin-top: 5px
 }
