--- a/src/components/cars/styles.less
+++ b/src/components/cars/styles.less
@@ -11,3 +11,16 @@
     color: rgb(202 202 202);
     /* Firefox */
 }
+
+.ant-transfer-operation .ant-btn .anticon {
+    margin-top: 5px
+}
+
+.fixAnticon .anticon svg {
+    margin-top: 6px !important;
+}
+
+// .steps-action {
+//     float: right;
+//     padding-bottom: 50px;
+// }
