--- a/src/components/cars/styles.less
+++ b/src/components/cars/styles.less
@@ -16,9 +16,10 @@
     margin-top: 5px
 }
 
-.fixAnticon .anticon svg {
-    margin-top: 6px !important;
+.fixAnticon .anticon.anticon-close-circle.ant-input-clear-icon svg {
+    margin-top: 5px !important;
 }
+
 
 // .steps-action {
 //     float: right;
